--- a/RecycleHub/src/app/shared/navbar/navbar.component.html
+++ b/RecycleHub/src/app/shared/navbar/navbar.component.html
@@ -22,7 +22,7 @@
       <!-- secondary nav -->
       <div class="hidden md:flex items-center space-x-1">
         <a routerLink="/login" class="py-5 px-3">Login</a>
-        <a href="" class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300">Signup</a>
+        <a routerLink="/register" class="py-2 px-3 bg-yellow-400 hover:bg-yellow-300 text-yellow-900 hover:text-yellow-800 rounded transition duration-300">Signup</a>
       </div>
 
 
