--- a/RecycleHub/src/app/shared/navbar/navbar.component.html
+++ b/RecycleHub/src/app/shared/navbar/navbar.component.html
@@ -13,10 +13,10 @@
         </div>
 
         <!-- primary nav -->
-      <!--  <div class="hidden md:flex items-center space-x-1">
-          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
+        <div class="hidden md:flex items-center space-x-1">
+          <a routerLink="/dashboard" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
           <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
-        </div>-->
+        </div>
       </div>
 
       <!-- secondary nav -->
