--- a/RecycleHub/src/app/features/auth/login/login.component.html
+++ b/RecycleHub/src/app/features/auth/login/login.component.html
@@ -1,13 +1,16 @@
-<div class="w-full">
-  <div class="w-full mt-16">
+<app-navbar></app-navbar>
+
+<div class="w-full h-[100vh]  flex items-center justify-center bg-gradient-to-t from-[#bed47c] to-[#dfe4d3] ">
+  <div class="w-2xl   rounded shadow-xl bg-white">
+
+    <app-header-form></app-header-form>
 
 
     <form (ngSubmit)="onLogin()" [formGroup]="loginForm" class="m-10">
 
-
       <!-- Email -->
 
-      <div class="relative mb-6">
+      <div class="relative  mb-6">
         <label class="flex  items-center mb-2 text-gray-600 text-sm font-medium">Email
           <svg class="ml-1" fill="none" height="7" viewBox="0 0 7 7" width="7" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -58,11 +61,11 @@
       </div>
 
       <div class="flex items-center justify-center">
-        <button [disabled]="loginForm.invalid"
-                class="w-52 h-12 shadow-sm rounded-full bg-indigo-600 hover:bg-indigo-800 transition-all duration-700 text-white text-base font-semibold leading-7"
-                type="submit">
-          Login
-        </button>
+        <app-shared-button
+          (clicked)="onLogin()"
+          [disabled]="loginForm.invalid">
+          Log In
+        </app-shared-button>
       </div>
 
     </form>
