--- a/RecycleHub/src/app/features/profile/profile.component.html
+++ b/RecycleHub/src/app/features/profile/profile.component.html
@@ -7,7 +7,11 @@
       <img src="https://i.pravatar.cc/300" alt="Profile Picture" class="rounded-full w-48 h-48 mx-auto mb-4 border-4 border-indigo-800 dark:border-blue-900 transition-transform duration-300 hover:scale-105">
       <h1 class="text-2xl font-bold text-indigo-800 dark:text-white mb-2">{{ user.firstName  }} {{ user.lastName}}</h1>
       <p class="text-gray-600 dark:text-gray-300">Software Developer</p>
-      <button class="mt-4 bg-indigo-800 text-white px-4 py-2 rounded-lg hover:bg-blue-900 transition-colors duration-300">Edit Profile</button>
+      <app-shared-button
+        (clicked)="openEditProfilePopup()"
+        [disabled]="disabled">
+        Edit Profile
+      </app-shared-button>
     </div>
     <div class="md:w-2/3 md:pl-8">
       <h2 class="text-xl font-semibold text-indigo-800 dark:text-white mb-4">About Me</h2>
