--- a/RecycleHub/src/app/features/profile/edit-profile-pop-up/edit-profile-pop-up.component.html
+++ b/RecycleHub/src/app/features/profile/edit-profile-pop-up/edit-profile-pop-up.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="mb-3">
     <label>Phone number:</label>
-    <input type="text" class="w-full border p-2" [(ngModel)]="data.phoneNumber" name="fullName" />
+    <input type="text" class="w-full border p-2" [(ngModel)]="data.phone" name="fullName" />
   </div>
   <div class="mb-3">
     <label>Date of birthday:</label>
