--- a/RecycleHub/src/app/features/profile/profile.component.html
+++ b/RecycleHub/src/app/features/profile/profile.component.html
@@ -1,54 +1,59 @@
 <app-navbar></app-navbar>
 
 <div class="bg-gradient-to-t from-[#bed47c] to-[#dfe4d3] min-h-screen flex items-center justify-center p-4">
-<div class="bg-white dark:bg-gray-800 rounded-xl shadow-2xl max-w-4xl w-full p-8 transition-all duration-300 animate-fade-in">
+<div class="bg-white  rounded-xl shadow-2xl max-w-4xl w-full p-8 transition-all duration-300 animate-fade-in">
   <div *ngIf="user$ | async as user" class="flex flex-col md:flex-row">
     <div class="md:w-1/3 text-center mb-8 md:mb-0">
       <img src="https://i.pravatar.cc/300" alt="Profile Picture" class="rounded-full w-48 h-48 mx-auto mb-4 border-4 border-indigo-800 dark:border-blue-900 transition-transform duration-300 hover:scale-105">
-      <h1 class="text-2xl font-bold text-indigo-800 dark:text-white mb-2">{{ user.firstName  }} {{ user.lastName}}</h1>
-      <p class="text-gray-600 dark:text-gray-300">Software Developer</p>
-      <app-shared-button
-        (clicked)="openEditProfilePopup()"
-        [disabled]="disabled">
-        Edit Profile
-      </app-shared-button>
+      <h1 class="text-2xl font-bold text-[#2a372c] mb-2">{{ user.firstName  }} {{ user.lastName}}</h1>
+      <p class="text-[#0a921c] font-semibold mb-2 ">Particular</p>
+
     </div>
     <div class="md:w-2/3 md:pl-8">
       <h2 class="text-xl font-semibold text-indigo-800 dark:text-white mb-4">About Me</h2>
-      <p class="text-gray-700 dark:text-gray-300 mb-6">
-        Passionate software developer with 5 years of experience in web technologies.
-        I love creating user-friendly applications and solving complex problems.
-      </p>
-      <h2 class="text-xl font-semibold text-indigo-800 dark:text-white mb-4">Skills</h2>
-      <div class="flex flex-wrap gap-2 mb-6">
-        <span class="bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full text-sm">JavaScript</span>
-        <span class="bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full text-sm">React</span>
-        <span class="bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full text-sm">Node.js</span>
-        <span class="bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full text-sm">Python</span>
-        <span class="bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full text-sm">SQL</span>
-      </div>
+
+
       <h2 class="text-xl font-semibold text-indigo-800 dark:text-white mb-4">Contact Information</h2>
-      <ul class="space-y-2 text-gray-700 dark:text-gray-300">
+      <ul class="space-y-2 text-[#82b53e]">
         <li class="flex items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 20 20" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 20 20" fill="#2a372c">
             <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
             <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
           </svg>
           {{ user.email }}
         </li>
         <li class="flex items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 20 20" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 20 20" fill="#2a372c">
             <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
           </svg>
-          +1 (555) 123-4567
+          {{ user.phone }}
         </li>
         <li class="flex items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 20 20" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 20 20" fill="#2a372c">
             <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
           </svg>
-          San Francisco, CA
+          {{ user.address}}
+        </li>
+        <li class="flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-indigo-800 dark:text-blue-900" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M128 0c17.7 0 32 14.3 32 32l0 32 128 0 0-32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 32 48 0c26.5 0 48 21.5 48 48l0 48L0 160l0-48C0 85.5 21.5 64 48 64l48 0 0-32c0-17.7 14.3-32 32-32zM0 192l448 0 0 272c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 192zm64 80l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm128 0l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zM64 400l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0zm112 16l0 32c0 8.8 7.2 16 16 16l32 0c8.8 0 16-7.2 16-16l0-32c0-8.8-7.2-16-16-16l-32 0c-8.8 0-16 7.2-16 16z"/></svg>
+          {{ user.dateOfBirth}}
         </li>
       </ul>
+      <div class="flex flex-col mt-6 gap-4">
+        <app-shared-button
+          (clicked)="openEditProfilePopup()"
+          [disabled]="disabled" >
+          Edit Profile
+        </app-shared-button>
+        <app-shared-button
+          (clicked)="onDeleteAccount()"
+          [disabled]="disabled"
+          buttonClasses = "w-52 h-10 shadow-sm rounded-full bg-red-500 hover:bg-red-600 transition-all duration-700 text-white text-base font-semibold leading-7">
+          Delete Profile
+
+        </app-shared-button>
+      </div>
+
     </div>
   </div>
 </div>
