--- a/RecycleHub/src/app/shared/navbar/navbar.component.html
+++ b/RecycleHub/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="bg-gray-100">
+<nav class="bg-gray-100 ">
   <div class="max-w-6xl mx-auto px-4">
     <div class="flex justify-between">
 
@@ -14,7 +14,7 @@
         <!-- primary nav -->
         <div class="hidden md:flex items-center space-x-1">
           <a routerLink="/profile" class="py-5 px-3 text-gray-700 hover:text-gray-900">Features</a>
-          <a href="#" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
+          <a routerLink="/requests" class="py-5 px-3 text-gray-700 hover:text-gray-900">Pricing</a>
         </div>
       </div>
 
