--- a/RecycleHub/src/app/features/auth/login/login.component.html
+++ b/RecycleHub/src/app/features/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="w-full h-[100vh]  flex items-center justify-center bg-gradient-to-t from-[#bed47c] to-[#dfe4d3] ">
+<div class="w-full h-[100vh]  flex items-center justify-center bg-gradient-to-t from-[#bed47c] to-[#dfe4d3] overflow-y-hidden " >
   <div class="w-2xl   rounded shadow-xl bg-white">
 
     <app-header-form></app-header-form>
