--- a/RecycleHub/src/app/features/profile/profile.component.html
+++ b/RecycleHub/src/app/features/profile/profile.component.html
@@ -6,7 +6,7 @@
     <div class="md:w-1/3 text-center mb-8 md:mb-0">
       <img src="https://i.pravatar.cc/300" alt="Profile Picture" class="rounded-full w-48 h-48 mx-auto mb-4 border-4 border-indigo-800 dark:border-blue-900 transition-transform duration-300 hover:scale-105">
       <h1 class="text-2xl font-bold text-[#2a372c] mb-2">{{ user.firstName  }} {{ user.lastName}}</h1>
-      <p class="text-[#0a921c] font-semibold mb-2 ">Particular</p>
+      <p class="text-[#0a921c] font-semibold mb-2 ">{{ user.role }}</p>
 
     </div>
     <div class="md:w-2/3 md:pl-8">
