--- a/RecycleHub/src/app/shared/navbar/navbar.component.html
+++ b/RecycleHub/src/app/shared/navbar/navbar.component.html
@@ -20,7 +20,7 @@
 
       <!-- secondary nav -->
       <div class="hidden md:flex items-center space-x-6">
-        <a routerLink="/login" class="py-2 px-3 hover:bg-[#82b53e]  hover:text-white rounded transition duration-300">Login</a>
+        <a routerLink="/login" class="py-2 px-3 hover:bg-[#82b53e] text-[#2a372c]  hover:text-white rounded transition duration-300">Login</a>
         <a routerLink="/register" class=" text-white py-2 px-3 bg-[#82b53e] hover:bg-[#3e722b]  hover:text-white rounded transition duration-300">Signup</a>
       </div>
 
