add collecter action s

--- a/RecycleHub/src/app/features/auth/register/register.component.html
+++ b/RecycleHub/src/app/features/auth/register/register.component.html
@@ -84,9 +84,9 @@
     </div>
   </div>
       <!-- Address -->
-      <div class="relative mb-6">
+        <div class="relative mb-6">
         <div class="flex flex-row">
-          <label class="flex  items-center mb-2 text-gray-600 text-sm font-medium">Address
+          <label class="flex  items-center mb-2 text-gray-600 text-sm font-medium">Address (street, city, country )
           </label>
           <svg class="ml-1 mt-1" fill="none" height="7" viewBox="0 0 7 7" width="7" xmlns="http://www.w3.org/2000/svg">
             <path
